[package]
name = "enum_const_derive"
version = "0.1.1"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "enum const trait"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/enum_const"
readme = "../README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.7"
